add picture for login widget

--- a/readme
+++ b/readme
@@ -10,3 +10,8 @@ Todo:
     9、界面美化
     10、添加退出关机按钮
     11、触摸屏上升、停止、下降功能
+    12、当 控制模式(编场模式和单控模式) 发生改变时，
+    13、软键盘
+    14、按键自定义
+    15、处理触摸屏发送的旁路和禁用信息
+
