--- a/readme
+++ b/readme
@@ -1,18 +1,21 @@
 Todo:
     # 1、应该根据触摸屏选中设备信息， 分别显示在长条屏的不同位置
     2、数据库中创建存储设备状态位置等信息用于发送和接收
-    3、接收触摸屏数据设置信息
+    # 3、接收触摸屏数据设置信息
     # 4、接收设备选中信息并相应，对其他触摸屏禁用设备
-    5、服务器和plc的数据通信
+    # 5、服务器和plc的数据通信
     6、完善数据通信的callreturn和CallError的设计
-    7、根据plc的设备编号上传的设备信息更新数据显示和图形显示的设备详细信息
+    # 7、根据plc的设备编号上传的设备信息更新数据显示和图形显示的设备详细信息
     8、删除tcp连接时的hello测试信息
-    9、界面美化
+    # 9、界面美化
     10、添加退出关机按钮
-    11、触摸屏上升、停止、下降功能
+    # 11、触摸屏上升、停止、下降功能
     12、当 控制模式(编场模式和单控模式) 发生改变时，
-    13、软键盘
+    # 13、软键盘
     14、按键自定义
     15、处理触摸屏发送的旁路和禁用信息
-    16、设备选中互斥(多个触摸屏同时选中一个设备)
+    # 16、设备选中互斥(多个触摸屏同时选中一个设备)
+    17、上位机给长条屏幕发送关机命令
+    18、长条屏发送区域总数量， 服务器根据总数量进行信息显示
+
 
