add analog detection

--- a/readme
+++ b/readme
@@ -17,5 +17,6 @@ Todo:
     # 16、设备选中互斥(多个触摸屏同时选中一个设备)
     17、上位机给长条屏幕发送关机命令
     18、长条屏发送区域总数量， 服务器根据总数量进行信息显示
+    19、触摸屏连网后上传本地已选择设备， 服务器做互斥处理
 
 
